--- a/scroll_timeline_cards (2).html
+++ b/scroll_timeline_cards (2).html
@@ -9,8 +9,7 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: #181818;
-      color: #eee;
+      background: transparent;
       padding: 0;
       overflow-x: hidden;
     }
