--- a/scroll_timeline_cards (2).html
+++ b/scroll_timeline_cards (2).html
@@ -8,7 +8,7 @@
   <style>
     body {
       margin: 0;
-      background: #111;
+      background: transparent;
       font-family: 'Work Sans', sans-serif;
       color: #fff;
       overflow-x: hidden;
