--- a/scroll_timeline_cards (2).html
+++ b/scroll_timeline_cards (2).html
@@ -1,212 +1,167 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Timeline</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Timeline GSAP Cards</title>
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@600&family=Azaret+Mono&display=swap" rel="stylesheet">
   <style>
-    body {
-      margin: 0;
-      background: transparent;
-      font-family: 'Work Sans', sans-serif;
-      color: #fff;
-      overflow-x: hidden;
-    }
-    .timeline-container {
-      position: relative;
-      max-width: 1000px;
-      margin: 0 auto;
-      padding: 100px 20px;
-      min-height: 6600px;
-    }
+    body { margin:0; background:#111; font-family:'Work Sans',sans-serif; color:#fff; }
+    .timeline-container { position:relative; width:100vw; min-height:400vh; }
     .timeline-svg {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      z-index: 0;
-      pointer-events: none;
+      position:absolute; top:0; left:0; width:100vw; height:100%;
+      pointer-events:none; z-index:1;
     }
-    .timeline-path {
-      fill: none;
-      stroke: url(#gradientStroke);
-      stroke-width: 3;
-      stroke-dasharray: 10000;
-      stroke-dashoffset: 10000;
-    }
-    .dot {
-      fill: #ff4e27;
-      filter: drop-shadow(0 0 12px #ff4e27aa);
-    }
-    .timeline-step {
-      position: relative;
-      margin: 280px 0;
-      z-index: 2;
-      opacity: 0;
-      transform: translateY(50px);
+    path { fill:none; stroke:url(#gradientStroke); stroke-width:3.5; }
+    circle.dot { fill:#ff4e27; filter:drop-shadow(0 0 10px #ff4e27bb); }
+    .card-step {
+      position:absolute; min-width:260px; max-width:340px;
+      opacity:0; pointer-events:auto; z-index:3;
+      transition: box-shadow .3s, opacity .3s;
+      will-change: transform, opacity;
+      cursor:pointer;
+      transform: translate(-50%, 0);
     }
     .card {
-      max-width: 400px;
-      background: rgba(25, 25, 25, 0.8);
-      backdrop-filter: blur(12px) saturate(160%);
-      border-radius: 20px;
-      padding: 24px 28px;
-      border: 1px solid rgba(255, 255, 255, 0.1);
-      box-shadow: 0 10px 40px rgba(0, 0, 0, 0.4);
-      transition: all 0.4s ease;
-      cursor: pointer;
+      background:rgba(30,30,30,0.94); 
+      border:1.5px solid #ff4e27aa;
+      border-radius:18px;
+      padding:20px 24px;
+      box-shadow: 0 4px 48px #0008;
+      backdrop-filter: blur(14px) saturate(120%);
+      transition:box-shadow .2s;
     }
-    .timeline-step:nth-child(odd) .card {
-      margin-left: 120px;
-    }
-    .timeline-step:nth-child(even) .card {
-      margin-left: auto;
-      margin-right: 120px;
-    }
-    .card:hover {
-      transform: scale(1.03);
-      box-shadow: 0 0 40px rgba(255, 78, 39, 0.6);
-      border-color: rgba(255, 255, 255, 0.3);
-    }
-    .card h3 {
-      text-transform: uppercase;
-      font-size: 32px;
-      margin-bottom: 12px;
-      word-break: break-word;
-      line-height: 1.3;
-    }
-    .card p {
-      font-family: 'Azaret Mono', monospace;
-      font-size: 12px;
-    }
-    .overlay {
-      position: fixed;
-      inset: 0;
-      backdrop-filter: blur(14px);
-      background: rgba(0, 0, 0, 0.5);
-      z-index: 10;
-      display: none;
-      justify-content: center;
-      align-items: center;
-      padding: 40px;
-    }
-    .overlay-card {
-      background: rgba(30, 30, 30, 0.95);
-      border: 2px solid #ff4e27;
-      padding: 40px;
-      border-radius: 20px;
-      max-width: 800px;
-      width: 100%;
-      font-family: 'Azaret Mono', monospace;
-      font-size: 12px;
-      box-shadow: 0 0 40px rgba(255, 78, 39, 0.6);
-    }
+    .card:hover { box-shadow: 0 2px 36px #ff4e27cc; }
+    .card h3 { font-size:22px; margin:0 0 10px; text-transform:uppercase; letter-spacing:.03em; }
+    .card p { font-size:13px; font-family:'Azaret Mono',monospace; margin:0; }
+    .overlay { position:fixed; inset:0; background:rgba(0,0,0,0.55); display:none; align-items:center; justify-content:center; z-index:20; }
+    .overlay .content { background:#222; color:#fff; padding:36px 30px 28px; border-radius:18px; max-width:520px; width:96%; }
+    .overlay .content h2 { margin:0 0 16px; }
   </style>
 </head>
 <body>
-<div class="timeline-container" id="timelineSteps"></div>
+  <div class="timeline-container" id="container">
+    <svg class="timeline-svg" id="timelineSvg">
+      <defs>
+        <linearGradient id="gradientStroke" x1="0" y1="0" x2="1" y2="1">
+          <stop offset="0%" stop-color="#FF4E27" />
+          <stop offset="100%" stop-color="#ffffff11" />
+        </linearGradient>
+      </defs>
+      <path id="path"></path>
+      <circle class="dot" id="dot" r="10"></circle>
+    </svg>
+  </div>
+  <div class="overlay" id="overlay"><div class="content" id="overlayContent"></div></div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+  <script>
+    gsap.registerPlugin(ScrollTrigger);
 
-<svg class="timeline-svg" viewBox="0 0 1400 6600">
-  <defs>
-    <linearGradient id="gradientStroke" x1="0" y1="0" x2="1" y2="1">
-      <stop offset="0%" stop-color="#FF4E27"/>
-      <stop offset="100%" stop-color="#ffffff11"/>
-    </linearGradient>
-  </defs>
-  <path id="path" class="timeline-path" d="M300,0 C300,300 1100,300 1100,600 C1100,900 300,900 300,1200 C300,1500 1100,1500 1100,1800 C1100,2100 300,2100 300,2400 C300,2700 1100,2700 1100,3000 C1100,3300 300,3300 300,3600 C300,3900 1100,3900 1100,4200 C1100,4500 300,4500 300,4800 C300,5100 1100,5100 1100,5400 C1100,5700 300,5700 300,6000 C300,6300 1100,6300 1100,6600"/>
-  <circle id="dot" class="dot" r="12" cx="300" cy="0"/>
-</svg>
+    const stations = [
+      { title:'Bauherrenanfrage', content:'Erste Kontaktaufnahme und Klärung der Grundvoraussetzungen.' },
+      { title:'Erstgespräch', content:'Persönliches Kennenlernen und Vorstellung erster Ideen.' },
+      { title:'Planungsauftrag', content:'Erteilung des Auftrags zur Erstellung einer ersten Entwurfsplanung.' },
+      { title:'Entwurfsphase', content:'Erarbeitung von Grundrissvarianten und Visualisierungen.' },
+      { title:'Kostenabschätzung', content:'Grobe Kostenschätzung.' },
+      { title:'Bauantrag', content:'Erstellung und Einreichung aller relevanten Unterlagen für die Baugenehmigung.' },
+      { title:'Ausführungsplanung', content:'Detaillierte Planung aller Bauausführungen und Abstimmung mit den Gewerken.' },
+      { title:'Vergabe', content:'Einholung und Auswertung der Angebote, Auswahl der Unternehmen.' },
+      { title:'Bauausführung', content:'Umsetzung des Bauvorhabens bis zur Fertigstellung und Übergabe.' }
+    ];
 
-<div id="overlay" class="overlay"><div class="overlay-card" id="overlayContent"></div></div>
+    const container = document.getElementById('container');
+    const svg = document.getElementById('timelineSvg');
+    const pathEl = document.getElementById('path');
+    const dot = document.getElementById('dot');
+    const overlay = document.getElementById('overlay');
+    const overlayContent = document.getElementById('overlayContent');
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/MotionPathPlugin.min.js"></script>
-<script>
-  const path = document.querySelector('#path');
-  const dot = document.querySelector('#dot');
-  const stepsContainer = document.getElementById('timelineSteps');
-  const overlay = document.getElementById('overlay');
-  const overlayContent = document.getElementById('overlayContent');
-
-  const stations = [
-    { title: 'Bauherrenanfrage', content: 'Erste Kontaktaufnahme und Klärung der Grundvoraussetzungen.' },
-    { title: 'Erstgespräch', content: 'Persönliches Kennenlernen und Vorstellung erster Ideen.' },
-    { title: 'Planungsauftrag', content: 'Erteilung des Auftrags zur Erstellung einer ersten Entwurfsplanung.' },
-    { title: 'Entwurfsphase', content: 'Erarbeitung von Grundrissvarianten und Visualisierungen.' },
-    { title: 'Kostenabschätzung', content: 'Ermittlung einer groben Kostenschätzung auf Basis der Entwurfsplanung.' },
-    { title: 'Anpassung und Optimierung', content: 'Überarbeitung der Planung nach Kundenfeedback.' },
-    { title: 'Vorplanung', content: 'Ausarbeitung der genehmigungsfähigen Unterlagen.' },
-    { title: 'Bauherrenfreigabe', content: 'Freigabe der Unterlagen zur finalen Antragstellung.' },
-    { title: 'Bauantragsplanung', content: 'Erstellung und Einreichung des Bauantrags bei der Behörde.' }
-  ];
-
-  stations.forEach(station => {
-    const step = document.createElement('div');
-    step.classList.add('timeline-step');
-    step.innerHTML = `
-      <div class="card" data-title="${station.title}" data-content="${station.content}">
-        <h3>${station.title}</h3>
-        <p>Klicke für mehr Details …</p>
-      </div>
-    `;
-    stepsContainer.appendChild(step);
-  });
-
-  gsap.registerPlugin(ScrollTrigger, MotionPathPlugin);
-
-  gsap.to("#path", {
-    strokeDashoffset: 0,
-    scrollTrigger: {
-      trigger: ".timeline-container",
-      start: "top top",
-      end: "bottom bottom",
-      scrub: 0.6
+    function getCardPositions() {
+      const vw = window.innerWidth;
+      const totalHeight = container.offsetHeight;
+      const minTop = window.innerHeight * 0.18;
+      const maxTop = totalHeight - window.innerHeight * 0.18;
+      return stations.map((_, i) => {
+        const y = minTop + (i / (stations.length - 1)) * (maxTop - minTop);
+        const x = (i % 2 ? vw * 0.74 : vw * 0.26);
+        return { x, y };
+      });
     }
-  });
 
-  gsap.to(dot, {
-    scrollTrigger: {
-      trigger: ".timeline-container",
-      start: "top top",
-      end: "bottom bottom",
-      scrub: 0.6
-    },
-    motionPath: {
-      path: "#path",
-      align: "#path",
-      autoRotate: false,
-      alignOrigin: [0.5, 0.5]
+    function drawPath(cardPositions) {
+      let d = `M${cardPositions[0].x},${cardPositions[0].y}`;
+      for(let i=1;i<cardPositions.length;i++) {
+        d += ` L${cardPositions[i].x},${cardPositions[i].y}`;
+      }
+      pathEl.setAttribute('d', d.trim());
     }
-  });
 
-  gsap.utils.toArray('.timeline-step').forEach(step => {
-    gsap.to(step, {
-      scrollTrigger: {
-        trigger: step,
-        start: 'top 80%',
-        toggleActions: 'play none none reverse'
-      },
-      opacity: 1,
-      y: 0,
-      duration: 0.8,
-      ease: 'power2.out'
-    });
-  });
+    const cardEls = [];
+    function createCards(cardPositions) {
+      container.innerHTML = '';
+      container.appendChild(svg);
+      cardEls.length = 0;
+      stations.forEach((st, i) => {
+        const cardWrap = document.createElement('div');
+        cardWrap.className = 'card-step';
+        cardWrap.innerHTML = `<div class='card'><h3>${st.title}</h3><p>${st.content}</p></div>`;
+        cardWrap.style.left = `${cardPositions[i].x}px`;
+        cardWrap.style.top = `${cardPositions[i].y}px`;
+        container.appendChild(cardWrap);
+        cardEls.push(cardWrap);
+        cardWrap.querySelector('.card').addEventListener('click', ()=>{
+          overlayContent.innerHTML = `<h2>${st.title}</h2><p>${st.content}</p>`;
+          overlay.style.display = 'flex';
+        });
+      });
+    }
 
-  stepsContainer.addEventListener('click', e => {
-    const card = e.target.closest('.card');
-    if (!card) return;
-    overlayContent.innerHTML = `<h2>${card.dataset.title}</h2><p>${card.dataset.content}</p>`;
-    overlay.style.display = 'flex';
-  });
+    function setCardVisibility() {
+      const vh = window.innerHeight;
+      cardEls.forEach(card => {
+        const cardRect = card.getBoundingClientRect();
+        if(cardRect.top < vh * 0.9 && cardRect.bottom > vh * 0.1){
+          card.style.opacity = 1;
+        } else {
+          card.style.opacity = 0;
+        }
+      });
+    }
 
-  overlay.addEventListener('click', () => overlay.style.display = 'none');
-  document.addEventListener('keydown', e => {
-    if (e.key === 'Escape') overlay.style.display = 'none';
-  });
-</script>
+    function updateEverything() {
+      svg.style.height = container.offsetHeight + 'px';
+
+      const cardPositions = getCardPositions();
+      createCards(cardPositions);
+      drawPath(cardPositions);
+
+      let length = pathEl.getTotalLength();
+      pathEl.style.strokeDasharray = length;
+      pathEl.style.strokeDashoffset = length;
+
+      ScrollTrigger.killAll();
+      ScrollTrigger.create({
+        trigger: ".timeline-container",
+        start: "top top",
+        end: "bottom bottom",
+        scrub: 1,
+        onUpdate: self => {
+          pathEl.style.strokeDashoffset = length * (1 - self.progress);
+          const pt = pathEl.getPointAtLength(length * self.progress);
+          dot.setAttribute('cx', pt.x);
+          dot.setAttribute('cy', pt.y);
+        }
+      });
+
+      setCardVisibility();
+    }
+
+    overlay.addEventListener('click', ()=> overlay.style.display='none');
+    window.addEventListener('scroll', setCardVisibility);
+    window.addEventListener('resize', updateEverything);
+
+    setTimeout(updateEverything, 50);
+  </script>
 </body>
 </html>
