--- a/scroll_timeline_cards (2).html
+++ b/scroll_timeline_cards (2).html
@@ -34,9 +34,24 @@
     .card:hover { box-shadow: 0 2px 36px #ff4e27cc; }
     .card h3 { font-size:22px; margin:0 0 10px; text-transform:uppercase; letter-spacing:.03em; }
     .card p { font-size:13px; font-family:'Azaret Mono',monospace; margin:0; }
-    .overlay { position:fixed; inset:0; background:rgba(0,0,0,0.55); display:none; align-items:center; justify-content:center; z-index:20; }
-    .overlay .content { background:#222; color:#fff; padding:36px 30px 28px; border-radius:18px; max-width:520px; width:96%; }
-    .overlay .content h2 { margin:0 0 16px; }
+    .overlay {
+  position:fixed; inset:0;
+  background:rgba(0,0,0,0.30);
+  display:none; align-items:center; justify-content:center;
+  z-index:20;
+  backdrop-filter: blur(3px) saturate(130%);
+}
+    $1
+.overlay .content:before {
+  content:'';
+  position:absolute; inset:0;
+  z-index:1;
+  pointer-events:none;
+  background-image: url('data:image/svg+xml;utf8,<svg viewBox="0 0 350 160" fill="none" xmlns="http://www.w3.org/2000/svg"><filter id="noiseFilter"><feTurbulence type="fractalNoise" baseFrequency="0.75" numOctaves="3" stitchTiles="stitch"/></filter><rect width="100%" height="100%" filter="url(%23noiseFilter)" opacity="0.23"/></svg>');
+  opacity:.23;
+  mix-blend-mode:soft-light;
+}
+.overlay .content h2 { margin:0 0 18px; }
   </style>
 </head>
 <body>
