--- a/scroll_timeline_cards (2).html
+++ b/scroll_timeline_cards (2).html
@@ -6,42 +6,53 @@
   <title>Timeline GSAP Cards</title>
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@600&family=Azaret+Mono&display=swap" rel="stylesheet">
   <style>
-    body { margin:0; background:rgba(0,0,0,0);; font-family:'Work Sans',sans-serif; color:#fff; }
-    .timeline-container { position:relative; width:100vw; min-height:400vh; }
-    .timeline-svg {
-      position:absolute; top:0; left:0; width:100vw; height:100%;
-      pointer-events:none; z-index:1;
-    }
-    path { fill:none; stroke:url(#gradientStroke); stroke-width:3.5; }
-    circle.dot { fill:#ff4e27; filter:drop-shadow(0 0 10px #ff4e27bb); }
-    .card-step {
-      position:absolute; min-width:260px; max-width:340px;
-      opacity:0; pointer-events:auto; z-index:3;
-      transition: box-shadow .3s, opacity .3s;
-      will-change: transform, opacity;
-      cursor:pointer;
-      transform: translate(-50%, 0);
-    }
-    .card {
-      background:rgba(30,30,30,0.94); 
-      border:1.5px solid #ff4e27aa;
-      border-radius:18px;
-      padding:20px 24px;
-      box-shadow: 0 4px 48px #0008;
-      backdrop-filter: blur(14px) saturate(120%);
-      transition:box-shadow .2s;
-    }
-    .card:hover { box-shadow: 0 2px 36px #ff4e27cc; }
-    .card h3 { font-size:22px; margin:0 0 10px; text-transform:uppercase; letter-spacing:.03em; }
-    .card p { font-size:13px; font-family:'Azaret Mono',monospace; margin:0; }
-    .overlay {
+body { margin:0; background:#111; font-family:'Work Sans',sans-serif; color:#fff; }
+.timeline-container { position:relative; width:100vw; min-height:400vh; }
+.timeline-svg {
+  position:absolute; top:0; left:0; width:100vw; height:100%;
+  pointer-events:none; z-index:1;
+}
+path { fill:none; stroke:url(#gradientStroke); stroke-width:3.5; }
+circle.dot { fill:#ff4e27; filter:drop-shadow(0 0 10px #ff4e27bb); }
+.card-step {
+  position:absolute; min-width:260px; max-width:340px;
+  opacity:0; pointer-events:auto; z-index:3;
+  transition: box-shadow .3s, opacity .3s;
+  will-change: transform, opacity;
+  cursor:pointer;
+  transform: translate(-50%, 0);
+}
+.card {
+  background:rgba(30,30,30,0.94); 
+  border:1.5px solid #ff4e27aa;
+  border-radius:18px;
+  padding:20px 24px;
+  box-shadow: 0 4px 48px #0008;
+  backdrop-filter: blur(14px) saturate(120%);
+  transition:box-shadow .2s;
+}
+.card:hover { box-shadow: 0 2px 36px #ff4e27cc; }
+.card h3 { font-size:22px; margin:0 0 10px; text-transform:uppercase; letter-spacing:.03em; }
+.card p { font-size:13px; font-family:'Azaret Mono',monospace; margin:0; }
+.overlay {
   position:fixed; inset:0;
-  background:rgba(0,0,0,0.30);
+  background: transparent;
   display:none; align-items:center; justify-content:center;
   z-index:20;
   backdrop-filter: blur(3px) saturate(130%);
 }
-    $1
+.overlay .content {
+  background:rgba(30,30,34,0.57);
+  color:#fff;
+  padding:44px 36px 34px;
+  border-radius:22px;
+  max-width:520px; width:96%;
+  box-shadow:0 8px 80px 0 #000b, 0 0 0 2.5px #fff3 inset;
+  backdrop-filter: blur(26px) saturate(135%);
+  border:1.2px solid rgba(255,255,255,0.18);
+  position:relative;
+  overflow:hidden;
+}
 .overlay .content:before {
   content:'';
   position:absolute; inset:0;
@@ -52,6 +63,15 @@
   mix-blend-mode:soft-light;
 }
 .overlay .content h2 { margin:0 0 18px; }
+body, html, .timeline-container {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+body::-webkit-scrollbar,
+html::-webkit-scrollbar,
+.timeline-container::-webkit-scrollbar {
+  display: none;
+}
   </style>
 </head>
 <body>
