--- a/scroll_timeline_cards (2).html
+++ b/scroll_timeline_cards (2).html
@@ -6,7 +6,7 @@
   <title>Timeline GSAP Cards</title>
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@600&family=Azaret+Mono&display=swap" rel="stylesheet">
   <style>
-body { margin:0; background:#111; font-family:'Work Sans',sans-serif; color:#fff; }
+body { margin:0; background:transparent; font-family:'Work Sans',sans-serif; color:#fff; }
 .timeline-container { position:relative; width:100vw; min-height:400vh; }
 .timeline-svg {
   position:absolute; top:0; left:0; width:100vw; height:100%;
