--- a/scroll_timeline_cards (2).html
+++ b/scroll_timeline_cards (2).html
@@ -1,153 +1,153 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Timeline GSAP Cards</title>
-  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@600&family=Azaret+Mono&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@600&family=Azaret+Mono&display=swap" rel="stylesheet" />
   <style>
-body { margin:0; background:transparent; font-family:'Work Sans',sans-serif; color:#fff; }
-.timeline-container { position:relative; width:100vw; min-height:400vh; }
-.timeline-svg {
-  position:absolute; top:0; left:0; width:100vw; height:100%;
-  pointer-events:none; z-index:1;
-}
-path { fill:none; stroke:url(#gradientStroke); stroke-width:3.5; }
-circle.dot { fill:#ff4e27; filter:drop-shadow(0 0 10px #ff4e27bb); }
-.card-step {
-  position:absolute; min-width:260px; max-width:340px;
-  opacity:0; pointer-events:auto; z-index:3;
-  transition: box-shadow .3s, opacity .3s;
-  will-change: transform, opacity;
-  cursor:pointer;
-  transform: translate(-50%, 0);
-}
-.card {
-  background:rgba(30,30,30,0.94); 
-  border:1.5px solid #ff4e27aa;
-  border-radius:18px;
-  padding:20px 24px;
-  box-shadow: 0 4px 48px #0008;
-  backdrop-filter: blur(14px) saturate(120%);
-  transition:box-shadow .2s;
-}
-.card:hover { box-shadow: 0 2px 36px #ff4e27cc; }
-.card h3 { font-size:22px; margin:0 0 10px; text-transform:uppercase; letter-spacing:.03em; }
-.card p { font-size:13px; font-family:'Azaret Mono',monospace; margin:0; }
-.overlay {
-  position:fixed; inset:0;
-  background: transparent;
-  display:none; align-items:center; justify-content:center;
-  z-index:20;
-  backdrop-filter: blur(3px) saturate(130%);
-}
-.overlay .content {
-  background:rgba(30,30,34,0.57);
-  color:#fff;
-  padding:44px 36px 34px;
-  border-radius:22px;
-  max-width:520px; width:96%;
-  box-shadow:0 8px 80px 0 #000b, 0 0 0 2.5px #fff3 inset;
-  backdrop-filter: blur(26px) saturate(135%);
-  border:1.2px solid rgba(255,255,255,0.18);
-  position:relative;
-  overflow:hidden;
-}
-.overlay .content:before {
-  content:'';
-  position:absolute; inset:0;
-  z-index:1;
-  pointer-events:none;
-  background-image: url('data:image/svg+xml;utf8,<svg viewBox="0 0 350 160" fill="none" xmlns="http://www.w3.org/2000/svg"><filter id="noiseFilter"><feTurbulence type="fractalNoise" baseFrequency="0.75" numOctaves="3" stitchTiles="stitch"/></filter><rect width="100%" height="100%" filter="url(%23noiseFilter)" opacity="0.23"/></svg>');
-  opacity:.23;
-  mix-blend-mode:soft-light;
-}
-.overlay .content h2 { margin:0 0 18px; }
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      font-family: 'Work Sans', sans-serif;
+      background: #111;
+      color: #fff;
+      overflow: hidden;
+    }
 
+    .scroll-wrapper {
+      position: fixed;
+      inset: 0;
+      overflow-y: scroll;
+      -webkit-overflow-scrolling: touch;
+      scrollbar-width: none;
+      -ms-overflow-style: none;
+    }
 
-  @media (max-width: 600px) {
-  .card-step {
-    min-width: 96vw;
-    max-width: 98vw;
-    left: 50vw !important;
-    padding: 0 !important;
-  }
-  .card {
-    padding: 14px 5vw 18px 5vw;
-    border-radius: 16px;
-    font-size: 16px;
-  }
-  .overlay .content {
-    max-width: 97vw;
-    padding: 22px 8px 16px 8px;
-    font-size: 15.5px;
-    border-radius: 14px;
-  }
-  .overlay .content h2 {
-    font-size: 19px;
-    margin-bottom: 10px;
-  }
-}
-</style>
+    .scroll-wrapper::-webkit-scrollbar {
+      display: none;
+    }
+
+    .timeline-container {
+      position: relative;
+      width: 100vw;
+      min-height: 400vh;
+    }
+
+    .timeline-svg {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100%;
+      pointer-events: none;
+      z-index: 1;
+    }
+
+    path {
+      fill: none;
+      stroke: url(#gradientStroke);
+      stroke-width: 3.5;
+    }
+
+    circle.dot {
+      fill: #ff4e27;
+      filter: drop-shadow(0 0 10px #ff4e27bb);
+    }
+
+    .card-step {
+      position: absolute;
+      min-width: 260px;
+      max-width: 340px;
+      opacity: 0;
+      pointer-events: auto;
+      z-index: 3;
+      transition: box-shadow 0.3s, opacity 0.3s;
+      will-change: transform, opacity;
+      cursor: pointer;
+      transform: translate(-50%, 0);
+    }
+
+    .card {
+      background: rgba(30, 30, 30, 0.94);
+      border: 1.5px solid #ff4e27aa;
+      border-radius: 18px;
+      padding: 20px 24px;
+      box-shadow: 0 4px 48px #0008;
+      backdrop-filter: blur(14px) saturate(120%);
+      transition: box-shadow 0.2s;
+    }
+
+    .card:hover {
+      box-shadow: 0 2px 36px #ff4e27cc;
+    }
+
+    .card h3 {
+      font-size: 22px;
+      margin: 0 0 10px;
+      text-transform: uppercase;
+      letter-spacing: 0.03em;
+    }
+
+    .card p {
+      font-size: 13px;
+      font-family: 'Azaret Mono', monospace;
+      margin: 0;
+    }
+
+    .overlay {
+      position: fixed;
+      inset: 0;
+      background: rgba(0,0,0,0.4);
+      display: none;
+      align-items: center;
+      justify-content: center;
+      z-index: 99;
+    }
+
+    .overlay .content {
+      background: rgba(30, 30, 34, 0.9);
+      padding: 30px;
+      border-radius: 16px;
+      max-width: 480px;
+      width: 90%;
+      box-shadow: 0 8px 60px rgba(0, 0, 0, 0.8);
+      backdrop-filter: blur(20px);
+    }
+
+    .overlay .content h2 {
+      margin-top: 0;
+      margin-bottom: 12px;
+    }
+  </style>
 </head>
 <body>
-  <div class="timeline-container" id="container">
-    <svg class="timeline-svg" id="timelineSvg">
-      <defs>
-        <linearGradient id="gradientStroke" x1="0" y1="0" x2="1" y2="1">
-          <stop offset="0%" stop-color="#FF4E27" />
-          <stop offset="100%" stop-color="#ffffff11" />
-        </linearGradient>
-      </defs>
-      <path id="path"></path>
-      <circle class="dot" id="dot" r="10"></circle>
-    </svg>
+  <div class="scroll-wrapper" id="scrollWrapper">
+    <div class="timeline-container" id="container">
+      <svg class="timeline-svg" id="timelineSvg">
+        <defs>
+          <linearGradient id="gradientStroke" x1="0" y1="0" x2="1" y2="1">
+            <stop offset="0%" stop-color="#FF4E27" />
+            <stop offset="100%" stop-color="#ffffff11" />
+          </linearGradient>
+        </defs>
+        <path id="path"></path>
+        <circle class="dot" id="dot" r="10"></circle>
+      </svg>
+    </div>
   </div>
-  <div class="overlay" id="overlay"><div class="content" id="overlayContent"></div></div>
+
+  <div class="overlay" id="overlay">
+    <div class="content" id="overlayContent"></div>
+  </div>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
   <script>
     gsap.registerPlugin(ScrollTrigger);
 
-    const stations = [
-  {
-    title: "Bauherrenanfrage",
-    content: `Die Anfrage durch die Bauherren wird meist telefonisch, per E-Mail oder über das Kontaktformular auf der Website gestellt. Sie dient als Kommunikationsinstrument für die erste Kontaktaufnahme und ermöglicht es, die Grundvoraussetzungen sowie Wünsche und Vorstellungen zu erfragen.`
-  },
-  {
-    title: "Dialog mit den Bauherren",
-    content: `Im direkten Austausch werden die individuellen Wünsche, Anforderungen und Vorstellungen an das Bauvorhaben detailliert besprochen. Hierzu gehören z. B. funktionale Aspekte, Raumprogramme, Budgetrahmen sowie die gewünschte Architektur- und Materialität.`
-  },
-  {
-    title: "Erstellung eines Raumprogrammes",
-    content: `Das Raumprogramm bildet die Grundlage für die spätere Planung. Es wird gemeinsam mit den Bauherren erstellt und dient als Leitfaden für die Gestaltung und Aufteilung des Gebäudes sowie der jeweiligen Räume, deren Größen, Verknüpfungen und speziellen Anforderungen.`
-  },
-  {
-    title: "Ideenaustausch & Konzeptskizzen",
-    content: `Erste Skizzen, Visualisierungen und Entwurfsideen werden entwickelt und mit den Bauherren diskutiert. Ziel ist es, kreative Lösungen zu finden und eine gestalterische Richtung festzulegen.`
-  },
-  {
-    title: "Erste Kostenschätzung",
-    content: `Eine grobe Kostenschätzung basierend auf dem Raumprogramm und den ersten Entwurfsideen gibt den Bauherren eine Orientierung über den zu erwartenden finanziellen Aufwand. Diese Schätzung wird im weiteren Verlauf kontinuierlich präzisiert.`
-  },
-  {
-    title: "Entwurfsphase",
-    content: `Auf Grundlage des abgestimmten Raumprogramms und der ersten Ideen wird ein vollständiger Entwurfsplan erstellt. Dazu gehören Grundrisse, Schnitte, Ansichten sowie aussagekräftige Visualisierungen. Varianten werden vorgestellt und im Dialog mit den Bauherren optimiert.`
-  },
-  {
-    title: "Interiordesign",
-    content: `Neben der äußeren Gestaltung des Gebäudes wird in enger Abstimmung mit den Bauherren das Innendesign geplant. Materialien, Farben, Beleuchtungskonzepte und Möblierungsvarianten werden in Moodboards und 3D-Visualisierungen präsentiert.`
-  },
-  {
-    title: "Angebotsanfrage der Netzwerkpartner",
-    content: `Erste Angebote werden bei ausgewählten Fachplanern, Handwerksbetrieben oder ausführenden Unternehmen eingeholt. So können Kosten weiter konkretisiert und zuverlässige Partner für die Umsetzung gefunden werden.`
-  },
-  {
-    title: "Bauantragsplanung",
-    content: `Alle relevanten Unterlagen für den Bauantrag – Pläne, Berechnungen, Beschreibungen – werden erstellt und eingereicht. Im Austausch mit Behörden werden eventuelle Rückfragen geklärt, um die Genehmigung möglichst zügig zu erhalten.`
-  }
-];
-
+    const scrollWrapper = document.getElementById('scrollWrapper');
     const container = document.getElementById('container');
     const svg = document.getElementById('timelineSvg');
     const pathEl = document.getElementById('path');
@@ -155,72 +155,100 @@ circle.dot { fill:#ff4e27; filter:drop-shadow(0 0 10px #ff4e27bb); }
     const overlay = document.getElementById('overlay');
     const overlayContent = document.getElementById('overlayContent');
 
+    const content = [
+      "Beschreibung zu Schritt 1",
+      "Beschreibung zu Schritt 2",
+      "Beschreibung zu Schritt 3",
+      "Beschreibung zu Schritt 4",
+      "Beschreibung zu Schritt 5",
+      "Beschreibung zu Schritt 6",
+      "Beschreibung zu Schritt 7",
+      "Beschreibung zu Schritt 8",
+      "Beschreibung zu Schritt 9"
+    ];
+
+    const cardEls = [];
     function getCardPositions() {
       const vw = window.innerWidth;
-      const totalHeight = container.offsetHeight;
-      const minTop = window.innerHeight * 0.18;
-      const maxTop = totalHeight - window.innerHeight * 0.18;
-      return stations.map((_, i) => {
-        const y = minTop + (i / (stations.length - 1)) * (maxTop - minTop);
-        const x = (i % 2 ? vw * 0.74 : vw * 0.26);
+      const vh = window.innerHeight;
+      const totalHeight = container.scrollHeight || vh * 4;
+      const minTop = vh * 0.2;
+      const maxTop = totalHeight - vh * 0.2;
+      return content.map((_, i) => {
+        const y = minTop + (i / (content.length - 1)) * (maxTop - minTop);
+        const x = (i % 2 ? vw * 0.7 : vw * 0.3);
         return { x, y };
       });
     }
 
-    function drawPath(cardPositions) {
-      let d = `M${cardPositions[0].x},${cardPositions[0].y}`;
-      for(let i=1;i<cardPositions.length;i++) {
-        d += ` L${cardPositions[i].x},${cardPositions[i].y}`;
-      }
-      pathEl.setAttribute('d', d.trim());
-    }
-
-    const cardEls = [];
     function createCards(cardPositions) {
-      container.innerHTML = '';
-      container.appendChild(svg);
       cardEls.length = 0;
-      stations.forEach((st, i) => {
+      document.querySelectorAll('.card-step').forEach(el => el.remove());
+      content.forEach((text, i) => {
+        const pos = cardPositions[i];
+        if (!pos) return;
         const cardWrap = document.createElement('div');
         cardWrap.className = 'card-step';
-        cardWrap.innerHTML = `<div class='card'><h3>${st.title}</h3><p>${st.content}</p></div>`;
-        cardWrap.style.left = `${cardPositions[i].x}px`;
-        cardWrap.style.top = `${cardPositions[i].y}px`;
+        cardWrap.innerHTML = `<div class='card'><h3>Schritt ${i + 1}</h3><p>${text}</p></div>`;
+        cardWrap.style.left = `${pos.x}px`;
+        cardWrap.style.top = `${pos.y}px`;
         container.appendChild(cardWrap);
         cardEls.push(cardWrap);
-        cardWrap.querySelector('.card').addEventListener('click', ()=>{
-          overlayContent.innerHTML = `<h2>${st.title}</h2><p>${st.content}</p>`;
+        cardWrap.addEventListener('click', () => {
+          overlayContent.innerHTML = `<h2>Schritt ${i + 1}</h2><p>${text}</p>`;
           overlay.style.display = 'flex';
         });
       });
     }
 
+    overlay.addEventListener('click', () => overlay.style.display = 'none');
+
+    function drawPath(cardPositions) {
+      if (!cardPositions.length) return;
+      let d = `M${cardPositions[0].x},${cardPositions[0].y}`;
+      for (let i = 1; i < cardPositions.length; i++) {
+        d += ` L${cardPositions[i].x},${cardPositions[i].y}`;
+      }
+      pathEl.setAttribute('d', d);
+    }
+
     function setCardVisibility() {
       const vh = window.innerHeight;
       cardEls.forEach(card => {
-        const cardRect = card.getBoundingClientRect();
-        if(cardRect.top < vh * 0.9 && cardRect.bottom > vh * 0.1){
-          card.style.opacity = 1;
-        } else {
-          card.style.opacity = 0;
-        }
+        const rect = card.getBoundingClientRect();
+        card.style.opacity = rect.top < vh * 0.9 && rect.bottom > vh * 0.1 ? 1 : 0;
       });
     }
 
     function updateEverything() {
-      svg.style.height = container.offsetHeight + 'px';
+      const positions = getCardPositions();
+      createCards(positions);
+      drawPath(positions);
 
-      const cardPositions = getCardPositions();
-      createCards(cardPositions);
-      drawPath(cardPositions);
-
-      let length = pathEl.getTotalLength();
+      const length = pathEl.getTotalLength();
       pathEl.style.strokeDasharray = length;
       pathEl.style.strokeDashoffset = length;
 
       ScrollTrigger.killAll();
+      ScrollTrigger.scrollerProxy(scrollWrapper, {
+        scrollTop(value) {
+          if (arguments.length) scrollWrapper.scrollTop = value;
+          return scrollWrapper.scrollTop;
+        },
+        getBoundingClientRect() {
+          return {
+            top: 0,
+            left: 0,
+            width: window.innerWidth,
+            height: window.innerHeight
+          };
+        }
+      });
+
+      ScrollTrigger.defaults({ scroller: scrollWrapper });
+
       ScrollTrigger.create({
-        trigger: ".timeline-container",
+        trigger: container,
         start: "top top",
         end: "bottom bottom",
         scrub: 1,
@@ -232,14 +260,14 @@ circle.dot { fill:#ff4e27; filter:drop-shadow(0 0 10px #ff4e27bb); }
         }
       });
 
+      ScrollTrigger.refresh();
       setCardVisibility();
     }
 
-    overlay.addEventListener('click', ()=> overlay.style.display='none');
-    window.addEventListener('scroll', setCardVisibility);
+    scrollWrapper.addEventListener('scroll', setCardVisibility);
     window.addEventListener('resize', updateEverything);
-
-    setTimeout(updateEverything, 50);
+    window.addEventListener('load', updateEverything);
+    setTimeout(updateEverything, 100);
   </script>
 </body>
 </html>
