--- a/scroll_timeline_cards (2).html
+++ b/scroll_timeline_cards (2).html
@@ -11,7 +11,7 @@
       padding: 0;
       height: 100%;
       font-family: 'Work Sans', sans-serif;
-      background: #0a0a0a;
+      background: transparent;
       color: #fff;
       overflow: hidden;
     }
