--- a/scroll_timeline_cards (2).html
+++ b/scroll_timeline_cards (2).html
@@ -106,7 +106,7 @@
       text-transform: uppercase;
       letter-spacing: 0.04em;
       font-weight: 600;
-      color: #ff4e27;
+      color: #e0e0e0;
     }
 
     .card-preview {
