--- a/scroll_timeline_cards (2).html
+++ b/scroll_timeline_cards (2).html
@@ -6,15 +6,26 @@
   <title>Kai Steppan Workflow Timeline</title>
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600&family=Azaret+Mono:wght@300;400&display=swap" rel="stylesheet" />
   <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      height: 90%;
-      font-family: 'Work Sans', sans-serif;
-      background: transparent;
-      color: #fff;
-      overflow: hidden;
-    }
+
+    
+html, body {
+  margin: 0;
+  padding: 0;
+  height: auto !important;
+  min-height: 100vh;
+  overflow-x: hidden;
+  overflow-y: visible !important;
+}
+
+/* Iframe-spezifische Anpassungen */
+body {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE */
+}
+
+body::-webkit-scrollbar {
+  display: none; /* Chrome, Safari */
+}
 
     .scroll-wrapper {
       position: fixed;
