--- a/scroll_timeline_cards (2).html
+++ b/scroll_timeline_cards (2).html
@@ -12,7 +12,7 @@
       width: 100%;
       height: 100%;
       font-family: 'Work Sans', sans-serif;
-      background: #0f0f10;
+      background: transparent;
       color: #fff;
       overflow-x: hidden;
       overflow-y: hidden;
@@ -43,7 +43,7 @@
       position: relative;
       width: 100vw;
       min-height: 400vh;
-      background: #0f0f10;
+      background: transparent;
     }
 
     .timeline-svg {
