--- a/scroll_timeline_cards (2).html
+++ b/scroll_timeline_cards (2).html
@@ -1,4 +1,4 @@
-"<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang=\"de\">
 <head>
   <meta charset=\"UTF-8\" />
@@ -651,4 +651,4 @@ Unser erweitertes Leistungsspektrum umfasst nicht nur unsere Kernkompetenzen, so
     });
   </script>
 </body>
-</html>"
+</html>
